@startuml
!theme toy
top to bottom direction

title **Backend API Comercial — Camada de Repository**

' ================================
'         REPOSITORY LAYER
' ================================
package "Repository Layer (Persistência)" <<rectangle>> {
    interface ClienteRepository {
        + findByIdentificationNumber(String identificationNumber)
        + findByEmail(String email)
        + findDistinctByNameContainingAndActive(String name, Boolean active, Pageable pageable)
    }
    interface ItemCompraRepository
    interface ItemRepository {
        + findByBatch(String batch)
    }
    interface ProdutoRepository {
        + findByCode(String code)
        + findByNameContaining(String name)
    }
    interface RefreshTokenRepository {
        + findByToken(String token)
        + findByUser(UsuarioBase user)
    }
    interface RoleRepository
    interface UsuarioApiRepository {
        + findByUser(UsuarioBase user)
    }
    interface UsuarioBaseRepository {
        + findByUsername(String username)
        + findByEmail(String email)
        + findByCPF(String cpf)
    }
    interface VendaRepository
    interface AccessoRepository
}

' ================================
'         DOMAIN LAYER
' ================================
package "Domain Layer (Entidades)" <<folder>> {

    class Acesso
    class Cliente
    class Item
    class ItemCompra
    class Produto
    class RefreshToken
    class Role
    class UsuarioApi
    class UsuarioBase
    class Venda
    package "Enums" {
        enum TypeRoles
        enum TypePurchaseStatus
    }
}

' ================================
'       RELACIONAMENTOS
' ================================

' Repositories gerenciam Entidades
UsuarioBaseRepository --> UsuarioBase : gerencia >
UsuarioApiRepository --> UsuarioApi : gerencia >
RefreshTokenRepository --> RefreshToken : gerencia >
RoleRepository --> Role : gerencia >
ClienteRepository --> Cliente : gerencia >
ProdutoRepository --> Produto : gerencia >
ItemRepository --> Item : gerencia >
VendaRepository --> Venda : gerencia >
ItemCompraRepository --> ItemCompra : gerencia >
AccessoRepository --> Acesso : gerencia >

@enduml
